--- a/commands.html
+++ b/commands.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="commandMenu">
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="7tvset">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">7tvset</a> - {set name}, id: {set id} - link: https://7tv.app/emote-sets/{set id} - {used slots}/{capacity} </p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;7tvset {username}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>5s</p>
@@ -78,7 +78,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="7tvuser">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">7tvuser</a> - {username}: https://7tv.app/users/{uid} - editors: {editors} - roles: {roles}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;7tvu {username}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>5s</p>
@@ -86,7 +86,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Alias: </a>7tvu</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="command">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">command add</a> - Added command: {command} / Command {command} already exists / No response given</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;command add {command name} {response}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
@@ -94,7 +94,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliaseses: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">command edit</a> - Succesfully edited command {command} / Command {command} was not found / No response given</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;command edit {command name} {response}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
@@ -102,7 +102,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">command delete</a> - Deleted command: {command} / Command {command} does not exist</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;command delete {command name}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
@@ -110,7 +110,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="enable">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">enable</a> - enabled {catagory}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;enable {catagory}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
@@ -118,7 +118,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="disable">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">disable</a> - disabled {catagory}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;disable {catagory}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
@@ -126,7 +126,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="emotelink">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">emotelink</a> - https://cdn.7tv.app/emote/{emote id}/{file type}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;emotelink {emote} [ {size} / {file type} / {size}.{file type} ]</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>1s</p>
@@ -134,7 +134,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Alias: </a>el</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="epoch">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">epoch</a> - epoch: {epochTime} , CET: {date, time, year}, relative: {relativeTime}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;epoch {epoch time (in ms)}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
@@ -142,7 +142,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="global">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">global</a> - Unique: {uniquely named badge amount}, with duplicates: {total badge amount} </p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;global</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
@@ -150,7 +150,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="invisiblecharacter">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">invisiblecharacter</a> - {invisible character}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;invisiblecharacter</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
@@ -158,7 +158,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>ic, invischar, invisiblechar, invischaracter, invisiblecharacter</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="potatoinfo">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">potatoinfo</a> - potato: {potato ready at}, steal: {steal ready at}, cdr: {cdr ready at}, quiz: {quiz ready at}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;poinfo {username}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
@@ -166,7 +166,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Alias: </a>poinfo</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="time">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">time</a> - {date, time, timezone} </p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;time</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
@@ -174,7 +174,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="usercard">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">usercard</a> - https://www.twitch.tv/popout/{channel}/viewercard/{username}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;usercard {username} {channel}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
@@ -182,7 +182,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Alias: </a>uc</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="uid">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">uid</a> - {uid}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;uid</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
@@ -190,7 +190,7 @@
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
-          <div class="minimizedCommandMenu">
+          <div class="minimizedCommandMenu" value="user">
             <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">user</a> - api response (not done yet)</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;user {username}</p>
             <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>1s</p>
@@ -215,18 +215,26 @@
         $(this).find("a").slice(1, 5).toggleClass("maximizedCommandKey")
         $(this).find("p").slice(1, 5).toggleClass("minimizedCommandValue")
         $(this).find("p").slice(1, 5).toggleClass("maximizedCommandValue")
+        var currentRotation = $(this).find("img").last().css("transform")
+        console.log(currentRotation)
+        if (currentRotation == "matrix(1, 0, 0, 1, 0, 0)") {
+          $(this).find("img").last().css("transform", "rotate(90deg)")
+        } else if (currentRotation == "matrix(0, 1, -1, 0, 0, 0)") {
+          $(this).find("img").last().css("transform", "rotate(0deg)")
+        }
+      })
+
+      $(".commandButton").click(function goToCommand(clickedDiv) {
+        clickedDiv = clickedDiv.currentTarget
+        var command = $(clickedDiv).text()
       })
 
       $(".authButton").click(function() {
         window.location.href = "lule"
       })
       $(".topbarButton").click(function changePage(button) {
-        var buttonText = button.currentTarget.text().toLowerCase()
-        if (buttonText == "home") {
-          window.location.href = ""
-        } else {
-          window.location.href = buttonText
-        }
+        button = button.currentTarget
+        window.location.href = $(button).text().toLowerCase()
       })
       $(".commandButton").click(function changeCommandMenu(button) {
 
